Added galaxy and gradient logo

--- a/src/littlevecolita/Views/Neila/Index.cshtml
+++ b/src/littlevecolita/Views/Neila/Index.cshtml
@@ -1,1 +1,62 @@
-﻿<p>this is muh paragraph</p>
+﻿
+
+<div id="galaxy">
+  <!-- linkedin.com/in/saransinha -->
+  <div id="stars-sm"></div>
+  <div id="stars-md"></div>
+  <div id="stars-lg"></div>
+
+  <div class="logo top">
+    <svg xmlns="http://www.w3.org/2000/svg" width="500" height="600 ">
+      <defs>
+        <linearGradient id="textgradient1" x1="0%" x2="100%" y1="0%" y2="100%" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#ff4136" offset="0%"></stop>
+          <stop stop-color="#1800ff" offset="100%"></stop>
+        </linearGradient>
+      </defs>
+      <g>
+        <text id="title-1">
+          <tspan x="0" y="200" letter-spacing="-10">Yan</tspan>
+          <tspan x="0" y="350" letter-spacing="-10">Tsui</tspan>
+        </text>
+      </g>
+    </svg>
+  </div>
+
+</div>
+
+
+<div class="placeholder">
+
+  <div class="logo">
+    <svg xmlns="http://www.w3.org/2000/svg" width="500" height="600 ">
+      <defs>
+        <linearGradient id="textgradient2" x1="0%" x2="100%" y1="0%" y2="100%" gradientUnits="userSpaceOnUse">
+          <stop stop-color="#1800ff" offset="0%"></stop>
+          <stop stop-color="#ff4136" offset="100%"></stop>
+        </linearGradient>
+      </defs>
+      <g>
+        <text id="title-2">
+          <tspan x="0" y="200" letter-spacing="-10">Yan</tspan>
+          <tspan x="0" y="350" letter-spacing="-10">Tsui</tspan>
+        </text>
+      </g>
+    </svg>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+@*<p>
+Passionate for both frontend and backend development with solid enterprise development experience; my capability in mastering new technologies and systems quickly, in conjunction with my enthusiasm drives me in creating the best software solutions imaginable. Additionally, I have engaged in client-facing roles throughout the SDLC process, engaging both the client and development team to deliver successful results.
+</p>
+
+<p>
+Now seeking for an opportunity to work with cutting-edge technologies and methodologies to excel my expertise in software development in aspirations of becoming a professional full stack developer. Ultimately, I want my personal development contributions to help a team of enthusiastic IT professionals who deliver innovative software solutions to maximise customer satisfaction, using expertly chosen platforms and frameworks, no matter the language.
+</p>*@
