--- a/src/littlevecolita/wwwroot/sass/base/_fonts.scss
+++ b/src/littlevecolita/wwwroot/sass/base/_fonts.scss
@@ -1,3 +1,5 @@
-// -----------------------------------------------------------------------------
-// This file contains all @font-face declarations, if any.
-// -----------------------------------------------------------------------------
+@import url(https://fonts.googleapis.com/css?family=Playfair+Display:900|Raleway:300,400,500,600,700,800,900);
+
+$font-serif: 'Playfair Display', serif;
+$font-sans: 'Raleway', sans-serif;
+
