--- a/src/littlevecolita/wwwroot/sass/pages/_home.scss
+++ b/src/littlevecolita/wwwroot/sass/pages/_home.scss
@@ -50,7 +50,7 @@ body {
 
 .placeholder {
   width: 100%;
-  height: 500px;
+  height: 150vh;
   position:absolute;
   top: 100vh;
   background-color: white;
